--- a/src/styles/Live.css
+++ b/src/styles/Live.css
@@ -1,16 +1,5 @@
-.video-container {
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-}
-
-.fullscreen-video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    /* Ensures the video covers the entire container */
+.videohaha {
+    background-color: red;
+    justify-content: center;
+    align-items: center;
 }
